--- a/gobotany/static/graphics/README
+++ b/gobotany/static/graphics/README
@@ -2,11 +2,13 @@ GO BOTANY: ABOUT SVG MAP FILES
 
 There are two sets of SVG maps in this directory:
 
-1. Master: Files originally obtained from Wikipedia Commons, with various
-tweaks made in Inkscape.
+1. Master: The New England counties map was originally obtained from Wikipedia Commons, with various tweaks made in Inkscape.
+
+The U.S. counties map was done the same way, but is no longer used on the site's species pages. It has been replaced by an extended version that adds the southern portion of eight Canadian provinces in order to extend coverage a bit to more of North America. No Canadian counties or districts are outlined in this version, and the data for Canada is currently only at the province level.
 
 - new-england-counties.svg
 - us-counties.svg
+- north-america.svg
 
 2. Scoured: Files resulting from running the master files through an
 open-source Python SVG cleanup script called Scour, available at:
@@ -15,6 +17,11 @@ These scoured files are NOT editable in Inkscape.
 
 - new-england-counties-scoured.svg
 - us-counties-scoured.svg
+- north-america-scoured.svg
+
+
+NOTE: At this point the master maps will not work properly when mapping actual distribution data with the Go Botany API code. Always generate and use the scoured version when developing and testing with the code and data.
+
 
 EDITING THE MAPS
 
@@ -26,9 +33,16 @@ RUNNING SCOUR
 Run scour.py one file at a time. Set the -i switch to the master input
 filename and the -o switch to the scoured output filename. Include the
 following configuration options for the Go Botany maps. The command should
-look like this (all on one line):
+look like those show below. They should be all on one line, and you should add directory paths to the Scour script and the input and output files as needed.
+
+For generating the New England counties scoured map (and the no-longer-used U.S. counties scoured map):
 
 $ python scour.py -i us-counties.svg -o us-counties-scoured.svg
---disable-style-to-xml --indent=none --set-precision=4
---enable-comment-stripping
+--disable-style-to-xml --indent=none --enable-comment-stripping --set-precision=4
 
+For generating the North America scoured map, leave off the --set-precision switch, like this:
+
+$ python scour.py -i us-counties.svg -o us-counties-scoured.svg
+--disable-style-to-xml --indent=none --enable-comment-stripping
+
+The previously included --set-precision=4 somehow fouled the alignment of the U.S. state lines following the Canada additions. Leaving it off (default precision = 5) fixes this.
