Tweak the Scour utility settings a bit in order to save a few more bytes on the North America map.
git-svn-id: http://svn.jazkarta.com/newfs-database-api/gobotany/trunk/src@1834 fafe9cc9-101d-4c6e-bffa-87022359e7d1

--- a/gobotany/static/graphics/README
+++ b/gobotany/static/graphics/README
@@ -40,9 +40,9 @@ For generating the New England counties scoured map (and the no-longer-used U.S.
 $ python scour.py -i us-counties.svg -o us-counties-scoured.svg
 --disable-style-to-xml --indent=none --enable-comment-stripping --set-precision=4
 
-For generating the North America scoured map, leave off the --set-precision switch, like this:
+For generating the North America scoured map, leave off the --set-precision switch, and add the --remove-metadata switch, like this:
 
 $ python scour.py -i us-counties.svg -o us-counties-scoured.svg
---disable-style-to-xml --indent=none --enable-comment-stripping
+--disable-style-to-xml --indent=none --enable-comment-stripping --remove-metadata
 
 The previously included --set-precision=4 somehow fouled the alignment of the U.S. state lines following the Canada additions. Leaving it off (default precision = 5) fixes this.
